# rust-exersizes-basics

./: readme.md
b_functions/: Cargo.toml
b_functions/src/: main.rs
c_simple_types/: Cargo.toml
c_simple_types/src/: lib.rs  main.rs
d_control_flow_strings/src/: main.rs
e_ownership_references/src/: main.rs
f_structs_traits/src/: main.rs
g_collections_enums/src/: main.rs
h_closures_threads/src/: main.rs
invaders/src/: frame.rs  lib.rs  main.rs  player.rs  render.rs  shot.rs
sandbox/: Cargo.toml
sandbox/src/: closures.md  colections.md  colections.rs  control_flow.rs  lib.rs  main.rs  struct.rs
variables/src/: main.rs
